--- a/web/css/personalizado.css
+++ b/web/css/personalizado.css
@@ -10,7 +10,7 @@ and open the template in the editor.
 
 .jumbotron{ text-align: center}
 
-.footer{position:relative;
+.footer{position:absolute;
         bottom : 0px}
 
 
