--- a/web/css/personalizado.css
+++ b/web/css/personalizado.css
@@ -13,5 +13,11 @@ and open the template in the editor.
 .footer{position:absolute;
         bottom : 0px}
 
+.default-margin {
+    margin-top: 30px;
+}
 
+.small-margin {
+    margin-top: 15px;
+}
              
